; ModuleID = '/home/carl/AnghaBench/linux/drivers/base/power/extr_main.c_dpm_suspend_end.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/base/power/extr_main.c_dpm_suspend_end.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [4 x i8] c"end\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @dpm_suspend_end(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  store i32 %0, i32* %2, align 4
  %5 = call i32 (...) @ktime_get()
  store i32 %5, i32* %3, align 4
  %6 = load i32, i32* %2, align 4
  %7 = call i32 @dpm_suspend_late(i32 %6)
  store i32 %7, i32* %4, align 4
  %8 = load i32, i32* %4, align 4
  %9 = icmp ne i32 %8, 0
  br i1 %9, label %10, label %11

10:                                               ; preds = %1
  br label %21

11:                                               ; preds = %1
  %12 = load i32, i32* %2, align 4
  %13 = call i32 @dpm_suspend_noirq(i32 %12)
  store i32 %13, i32* %4, align 4
  %14 = load i32, i32* %4, align 4
  %15 = icmp ne i32 %14, 0
  br i1 %15, label %16, label %20

16:                                               ; preds = %11
  %17 = load i32, i32* %2, align 4
  %18 = call i32 @resume_event(i32 %17)
  %19 = call i32 @dpm_resume_early(i32 %18)
  br label %20

20:                                               ; preds = %16, %11
  br label %21

21:                                               ; preds = %20, %10
  %22 = load i32, i32* %3, align 4
  %23 = load i32, i32* %2, align 4
  %24 = load i32, i32* %4, align 4
  %25 = call i32 @dpm_show_time(i32 %22, i32 %23, i32 %24, i8* getelementptr inbounds ([4 x i8], [4 x i8]* @.str, i64 0, i64 0))
  %26 = load i32, i32* %4, align 4
  ret i32 %26
}

declare dso_local i32 @ktime_get(...) #1

declare dso_local i32 @dpm_suspend_late(i32) #1

declare dso_local i32 @dpm_suspend_noirq(i32) #1

declare dso_local i32 @dpm_resume_early(i32) #1

declare dso_local i32 @resume_event(i32) #1

declare dso_local i32 @dpm_show_time(i32, i32, i32, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
